# YouTube-Migration

./: README.md  migrate_subscriptions.py  pyproject.toml
