[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["newhwan <newhwan99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
google-api-python-client = "^2.177.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
